manifests/services/networkpolicies/allowfromweb.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-web
  namespace: parra-np-api
spec:
  podSelector:
    matchLabels:
      app: api-server
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: parra-np-client
          podSelector:
            matchLabels:
              app: parra-client
      ports:
        - protocol: TCP
          port: 80
