manifests/services/networkpolicies/deny.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: parra-np-api
spec:
  ingress: []
  podSelector: {}
  policyTypes:
    - Ingress
